etc/oidc-aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
spec:
  tls:
    - hosts:
        # TODO: Replace MY_DISCOVERY_DOMAIN with the FQDN of the Discovery Provider that you will configure in DNS
        # - MY_DISCOVERY_DOMAIN
        - oidc-discovery.paasteurizers.com
      secretName: oidc-secret
  rules:
    # TODO: Replace MY_DISCOVERY_DOMAIN with the FQDN of the Discovery Provider that you will configure in DNS
    # - host: MY_DISCOVERY_DOMAIN
    - host: oidc-discovery.paasteurizers.com
      http:
        paths:
          - path: /.well-known/openid-configuration
            backend:
              serviceName: spire-oidc
              servicePort: 443
